--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ nbproject
 # windows thumbnail cache
 Thumbs.db
 
-# composer vendor dir
-#/vendor
+# config folder
+#/config
 
 # composer itself is not needed
 composer.phar
